--- a/AppShortcuts/app/src/main/res/layout/list_item.xml
+++ b/AppShortcuts/app/src/main/res/layout/list_item.xml
@@ -49,7 +49,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:visibility="visible"
-        style="@android:style/Widget.Material.Button.Borderless"/>
+        style="@style/Widget.AppCompat.Button.Borderless"/>
     <Button
         android:id="@+id/disable"
         android:text="@string/disable_shortcut"
@@ -58,5 +58,5 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:visibility="visible"
-        style="@android:style/Widget.Material.Button.Borderless"/>
+        style="@style/Widget.AppCompat.Button.Borderless"/>
 </LinearLayout>
