--- a/AppShortcuts/app/src/main/res/layout/main.xml
+++ b/AppShortcuts/app/src/main/res/layout/main.xml
@@ -30,7 +30,7 @@
         android:text="@string/existing_shortcuts"
     />
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
