Updated to upstream forked version

--- a/WindowManager/app/src/main/res/layout/activity_display_features.xml
+++ b/WindowManager/app/src/main/res/layout/activity_display_features.xml
@@ -36,7 +36,7 @@
         android:text="@string/state_update_log"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/fold_color_image_view"
+        app:layout_constraintStart_toStartOf="@id/not_separating_color_image_view"
         app:layout_constraintTop_toBottomOf="@id/current_state" />
 
     <TextView
@@ -68,16 +68,16 @@
         android:text="@string/legend"
         android:layout_marginHorizontal="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/fold_color_image_view"/>
+        app:layout_constraintBottom_toTopOf="@id/not_separating_color_image_view"/>
 
     <ImageView
-        android:id="@+id/fold_color_image_view"
+        android:id="@+id/not_separating_color_image_view"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
-        android:foreground="@color/color_feature_fold"
-        android:contentDescription="@string/fold_legend_color"
-        app:layout_constraintBottom_toTopOf="@id/hinge_color_image_view"
+        android:foreground="@color/color_feature_not_separating"
+        android:contentDescription="@string/separating_legend_color"
+        app:layout_constraintBottom_toTopOf="@id/separating_color_image_view"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -85,29 +85,29 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="@string/fold"
-        app:layout_constraintBottom_toTopOf="@id/hinge_color_text_view"
-        app:layout_constraintStart_toEndOf="@id/hinge_color_image_view" />
+        android:text="@string/not_separating"
+        app:layout_constraintBottom_toTopOf="@id/separating_color_text_view"
+        app:layout_constraintStart_toEndOf="@id/separating_color_image_view" />
 
     <ImageView
-        android:id="@+id/hinge_color_image_view"
+        android:id="@+id/separating_color_image_view"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:foreground="@color/color_feature_hinge"
+        android:foreground="@color/color_feature_separating"
         android:layout_marginStart="8dp"
         android:contentDescription="@string/hinge_legend_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/unknown_color_image_view" />
 
     <TextView
-        android:id="@+id/hinge_color_text_view"
+        android:id="@+id/separating_color_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:drawableStart="@color/color_feature_hinge"
-        android:text="@string/hinge"
+        android:drawableStart="@color/color_feature_separating"
+        android:text="@string/separating"
         app:layout_constraintBottom_toTopOf="@id/unknown_color_text_view"
-        app:layout_constraintStart_toEndOf="@id/hinge_color_image_view" />
+        app:layout_constraintStart_toEndOf="@id/separating_color_image_view" />
 
     <ImageView
         android:id="@+id/unknown_color_image_view"
