Added comments to MainActivity in DarkTheme

--- a/DarkTheme/Application/src/main/res/layout/activity_main.xml
+++ b/DarkTheme/Application/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         android:title="@string/app_name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UnusedAttribute" />
 
     <FrameLayout
         android:id="@+id/fragment_layout"
