Added comments to DocumentCentricActivity in DocumentCentricApps

--- a/DocumentCentricApps/Application/src/main/res/layout/activity_document_centric_main.xml
+++ b/DocumentCentricApps/Application/src/main/res/layout/activity_document_centric_main.xml
@@ -17,6 +17,7 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -42,7 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_small"
         android:layout_marginLeft="@dimen/margin_small"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="RtlHardcoded">
 
         <Button
             android:id="@+id/new_document_button"
