--- a/DownloadableFontsKotlin/app/src/main/res/layout/activity_main.xml
+++ b/DownloadableFontsKotlin/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -43,4 +43,4 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
         android:visibility="gone" />
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
