Added verbiage to README.md in SliceViewerKotlin

--- a/SliceViewerKotlin/app/src/main/res/layout/activity_slice_viewer.xml
+++ b/SliceViewerKotlin/app/src/main/res/layout/activity_slice_viewer.xml
@@ -17,6 +17,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="top"
@@ -43,7 +44,8 @@
                 android:layout_height="48dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:contentInsetStart="0dp"
-                android:contentInsetStartWithNavigation="0dp">
+                android:contentInsetStartWithNavigation="0dp"
+                tools:ignore="UnusedAttribute">
 
                 <androidx.appcompat.widget.SearchView
                     android:id="@+id/search_view"
