--- a/AppWidget/app/src/main/res/values-v21/styles.xml
+++ b/AppWidget/app/src/main/res/values-v21/styles.xml
@@ -19,6 +19,7 @@ requires API level 21
 -->
 <resources>
     <style name="Widget.AppWidget.AppWidget.Container" parent="android:Widget">
+        <item name="android:id">@android:id/background</item>
         <item name="android:padding">?attr/appWidgetPadding</item>
         <item name="android:background">@drawable/app_widget_background</item>
     </style>
@@ -26,5 +27,9 @@ requires API level 21
     <style name="Widget.AppWidget.AppWidget.InnerView" parent="android:Widget">
         <item name="android:padding">?attr/appWidgetPadding</item>
         <item name="android:background">@drawable/app_widget_inner_view_background</item>
+    </style>
+
+    <style name="Widget.AppWidget.ImageView.WeatherIcon" parent="android:Widget">
+        <item name="android:tint">?android:attr/colorAccent</item>
     </style>
 </resources>
