--- a/AppWidget/app/src/main/res/xml/app_widget_weather_forecast.xml
+++ b/AppWidget/app/src/main/res/xml/app_widget_weather_forecast.xml
@@ -14,21 +14,20 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<!--
-Intentionally omitting adding android:previewLayout because it consists of ListView and doesn't
-reflect the inflated contents of ListView in a widget preview.
-Thus, only supplying a static image through android:previewImage
--->
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:description="@string/items_widget_description"
-    android:initialKeyguardLayout="@layout/widget_items_collection"
-    android:initialLayout="@layout/widget_items_collection"
-    android:minWidth="180dp"
-    android:minHeight="220dp"
-    android:previewImage="@drawable/items_collection_widget_preview"
-    android:previewLayout="@layout/widget_items_collection_preview"
+    android:description="@string/app_widget_weather_description"
+    android:initialKeyguardLayout="@layout/widget_weather_forecast_small"
+    android:initialLayout="@layout/widget_weather_forecast_small"
+    android:maxResizeWidth="570dp"
+    android:maxResizeHeight="450dp"
+    android:minWidth="140dp"
+    android:minHeight="110dp"
+    android:minResizeWidth="140dp"
+    android:minResizeHeight="110dp"
+    android:previewImage="@drawable/weather_forecast_widget_preview"
+    android:previewLayout="@layout/widget_weather_forecast_small"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="3"
-    android:targetCellHeight="4"
+    android:targetCellHeight="2"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen" />
