--- a/AndroidOnChromeOSDragAndDropDemo/app/src/main/res/layout/activity_main.xml
+++ b/AndroidOnChromeOSDragAndDropDemo/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Drag Me!"
+        android:text="@string/drag_me"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/frame_target"
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:text="Drop Things Here!"
+            android:text="@string/drop_things_here"
             android:textSize="30sp" />
     </FrameLayout>
 
