--- a/AppWidget/app/src/main/res/layout/widget_grocery_grid.xml
+++ b/AppWidget/app/src/main/res/layout/widget_grocery_grid.xml
@@ -26,7 +26,8 @@
         android:id="@+id/todo_grid_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/todo_grid_left_row"
