--- a/AdvancedImmersiveMode/Application/src/main/res/layout/fragment_flags.xml
+++ b/AdvancedImmersiveMode/Application/src/main/res/layout/fragment_flags.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -57,13 +58,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/immersive_mode"
-            android:id="@+id/btn_immersive" />
+            android:id="@+id/btn_immersive"
+            tools:ignore="ButtonStyle" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/leanback_mode"
-            android:id="@+id/btn_leanback" />
+            android:id="@+id/btn_leanback"
+            tools:ignore="ButtonStyle" />
 
     </LinearLayout>
 </LinearLayout>
