--- a/AppShortcuts/app/src/main/res/layout/list_item.xml
+++ b/AppShortcuts/app/src/main/res/layout/list_item.xml
@@ -15,6 +15,7 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -26,7 +27,7 @@
         android:layout_gravity="center_vertical"
         android:orientation="vertical"
         android:paddingLeft="8dip"
-        >
+        tools:ignore="RtlHardcoded,RtlSymmetry">
         <TextView
             android:id="@+id/line1"
             android:layout_width="match_parent"
