--- a/AppWidget/app/src/main/res/layout/widget_weather_forecast_region_temperature_coming_hours.xml
+++ b/AppWidget/app/src/main/res/layout/widget_weather_forecast_region_temperature_coming_hours.xml
@@ -13,7 +13,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +34,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="top"
-                android:text="@string/degree_14" />
+                android:text="@string/degree_14"
+                tools:ignore="NestedWeights" />
 
             <LinearLayout
                 android:layout_width="match_parent"
