--- a/AppWidget/app/src/main/res/layout/widget_weather_forecast_small.xml
+++ b/AppWidget/app/src/main/res/layout/widget_weather_forecast_small.xml
@@ -14,6 +14,7 @@
   ~ limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/Widget.AppWidget.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:minHeight="@dimen/widget_element_min_length" >
+        android:minHeight="@dimen/widget_element_min_length"
+        tools:ignore="UseCompoundDrawables">
 
         <ImageView
             style="@style/Widget.AppWidget.ImageView.WeatherIcon"
