Fixed and/or silenced warnings in BasicImmersiveMode

--- a/BasicImmersiveMode/Application/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/BasicImmersiveMode/Application/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -27,7 +27,7 @@
               android:layout_height="match_parent"
               android:text="@string/intro_message"
               android:layout_margin="16dp" />
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
             android:name="com.example.android.common.logger.LogFragment"
             android:id="@+id/log_fragment"
             android:layout_weight="1"
