--- a/BasicImmersiveMode/Application/src/main/res/layout-sw600dp/activity_main.xml
+++ b/BasicImmersiveMode/Application/src/main/res/layout-sw600dp/activity_main.xml
@@ -28,7 +28,7 @@
         android:text="@string/intro_message"
         android:padding="16dp"
         android:layout_margin="16dp"/>
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:name="com.example.android.common.logger.LogFragment"
         android:id="@+id/log_fragment"
         android:layout_width="match_parent"
