--- a/DragAndDropAcrossApps/DragSource/src/main/res/layout/activity_main.xml
+++ b/DragAndDropAcrossApps/DragSource/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
   limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -45,7 +46,8 @@
             android:name="com.example.android.common.logger.LogFragment"
             android:id="@+id/log_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:ignore="FragmentTagUsage" />
 
     </ViewAnimator>
 
