--- a/DragAndDropAcrossApps/DropTarget/src/main/res/layout/fragment_droptarget.xml
+++ b/DragAndDropAcrossApps/DropTarget/src/main/res/layout/fragment_droptarget.xml
@@ -17,6 +17,7 @@
 -->
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -34,7 +35,8 @@
             android:layout_height="@dimen/image_size"
             android:background="@color/drag_inactive"
             android:pointerIcon="crosshair"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_width="wrap_content"
