--- a/SliceViewerKotlin/app/src/main/res/layout/slice_row.xml
+++ b/SliceViewerKotlin/app/src/main/res/layout/slice_row.xml
@@ -33,7 +33,8 @@
         android:clickable="true"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/uri_label"
@@ -48,9 +49,9 @@
             android:id="@+id/uri_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
             android:gravity="center_vertical"
-            tools:text="content://..." />
+            tools:text="content://..."
+            app:drawableEndCompat="@drawable/ic_arrow_forward_black_24dp" />
     </LinearLayout>
 
     <FrameLayout
