--- a/ElevationDrag/Application/src/main/res/layout/activity_main.xml
+++ b/ElevationDrag/Application/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                   android:text="@string/intro_message" />
         </ScrollView>
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
               android:name="com.example.android.common.logger.LogFragment"
               android:id="@+id/log_fragment"
               android:layout_width="match_parent"
