Updated AGP to 8.4.0 and updated gradle dependency in ImmersiveMode

--- a/ImmersiveMode/app/src/main/res/layout/main_activity.xml
+++ b/ImmersiveMode/app/src/main/res/layout/main_activity.xml
@@ -59,7 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginLeft="@dimen/spacing_medium"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        tools:listitem="@android:layout/simple_list_item_1"
+        tools:ignore="RtlHardcoded" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -74,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginLeft="@dimen/spacing_medium"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        tools:listitem="@android:layout/simple_list_item_1"
+        tools:ignore="RtlHardcoded" />
 
 </LinearLayout>
