--- a/AppShortcuts/app/src/main/res/layout/main.xml
+++ b/AppShortcuts/app/src/main/res/layout/main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,28 +13,30 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    android:id="@+id/root_view"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
     <Button
         android:id="@+id/add"
-        android:text="@string/add_new_website"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:onClick="onAddPressed"/>
+        android:onClick="onAddPressed"
+        android:text="@string/add_new_website" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#444444"
         android:text="@string/existing_shortcuts"
-    />
+        android:textColor="#444444" />
+
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
-        android:enabled="true"
-    />
+        android:enabled="true" />
 </LinearLayout>
 
 
