Updated date of gradle-wrapper.properties, and kludged marginTop of scrollview in DragAndDropAcrossApps

--- a/DragAndDropAcrossApps/DragSource/src/main/res/layout/activity_main.xml
+++ b/DragAndDropAcrossApps/DragSource/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
         <ScrollView
             style="@style/Widget.SampleMessageTile"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="64dp">
 
             <TextView
                 style="@style/Widget.SampleMessage"
