--- a/DragAndDropAcrossApps/DropTarget/src/main/res/layout/activity_main.xml
+++ b/DragAndDropAcrossApps/DropTarget/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
         <ScrollView
             style="@style/Widget.SampleMessageTile"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="64dp">
 
             <TextView
                 style="@style/Widget.SampleMessage"
