--- a/BasicImmersiveMode/Application/src/main/res/layout/activity_main.xml
+++ b/BasicImmersiveMode/Application/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <Space
+    <android.widget.Space
         android:layout_width="match_parent"
         android:layout_height="64dp" />
 
